# fast_slides

./: .gitignore  README.md  README_zh.md  main.py  pack.bat  pack.sh  pyproject.toml  run.py  sample_slide.md  setup.py  slide.md  start.bat  start.sh  test-fix.md  test_yaml.py
fast_slides/: __init__.py  cli.py  config.py  converter.py  gui.py
samples/: README.md  advanced.md  basic.md  with-author.md
tests/: test_converter.py
